--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,13 +16,20 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorAccent"
-        android:text="SEARCH Spinner"
+        android:text="SpaceX News"
         android:textAlignment="center"
         android:layout_gravity="center"
-        android:textAllCaps="true"
         android:textColor="@color/colorWhite"
         android:padding="16dp"
         android:textSize="16sp"/>
+        <TextView
+            android:id="@+id/show_json"
+            android:layout_width="match_parent"
+            android:layout_height="64dp"
+            android:textColor="@color/colorAccent"
+            android:padding="8dp"
+            android:text="Waiting for JSON file from server"
+            android:textSize="8sp"/>
 
     <ListView
         android:id="@+id/list"
