--- a/app/src/main/res/layout/news_list.xml
+++ b/app/src/main/res/layout/news_list.xml
@@ -9,14 +9,26 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_margin="@dimen/activity_horizontal_margin">
-    <TextView
-        android:id="@+id/date_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="@dimen/text_date_size"
-        android:textColor="@color/colorPrimaryLight"
-        android:layout_marginBottom="@dimen/margin_date"
-        tools:text="Date"/>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/date_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/text_date_size"
+                android:textColor="@color/colorPrimaryLight"
+                android:layout_marginBottom="@dimen/margin_date"
+                android:layout_marginRight="@dimen/activity_horizontal_margin"
+                tools:text="Date"/>
+            <TextView
+                android:id="@+id/section_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:text="Section"/>
+        </LinearLayout>
+
     <TextView
         android:id="@+id/title_label"
         android:layout_width="wrap_content"
