--- a/app/src/main/res/layout/news_list.xml
+++ b/app/src/main/res/layout/news_list.xml
@@ -1,50 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_margin="@dimen/activity_horizontal_margin">
+        android:layout_margin="@dimen/activity_horizontal_margin"
+        android:orientation="vertical">
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
+
             <TextView
                 android:id="@+id/date_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="@dimen/text_date_size"
-                android:textColor="@color/colorPrimaryLight"
                 android:layout_marginBottom="@dimen/margin_date"
                 android:layout_marginRight="@dimen/activity_horizontal_margin"
-                tools:text="Date"/>
+                android:textColor="@color/colorPrimaryLight"
+                android:textSize="@dimen/text_date_size"
+                tools:text="Date" />
+
             <TextView
                 android:id="@+id/section_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                tools:text="Section"/>
+                tools:text="Section" />
         </LinearLayout>
 
-    <TextView
-        android:id="@+id/title_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="@dimen/text_title_size"
-        android:textColor="@color/colorPrimaryDark"
-        android:layout_marginLeft="@dimen/margin_title"
-        tools:text="Title"/>
-    <TextView
-        android:id="@+id/url_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="@dimen/text_url_size"
-        android:textColor="@color/colorAccent"
-        android:layout_marginBottom="@dimen/margin_url"
-        tools:text="Url"/>
+        <TextView
+            android:id="@+id/title_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/margin_title"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="@dimen/text_title_size"
+            tools:text="Title" />
+
+        <TextView
+            android:id="@+id/url_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/margin_url"
+            android:textColor="@color/colorAccent"
+            android:textSize="@dimen/text_url_size"
+            tools:text="Url" />
     </LinearLayout>
 
 </LinearLayout>
